--- a/src/main/resources/fxml/berletek.fxml
+++ b/src/main/resources/fxml/berletek.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
@@ -8,12 +9,13 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="273.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.inf.unideb.BerletekController">
    <children>
       <Text layoutX="111.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="-tól" wrappingWidth="25.814453125" />
-      <TextField fx:id="licensePlate1" layoutX="56.0" layoutY="67.0" prefHeight="25.0" prefWidth="135.0" promptText="Rendszám" />
+      <TextField fx:id="licensePlate1" alignment="CENTER" layoutX="56.0" layoutY="67.0" prefHeight="25.0" prefWidth="135.0" promptText="Rendszám" />
       <TextField fx:id="toText" layoutX="136.0" layoutY="33.0" prefHeight="25.0" prefWidth="86.0" />
       <TextField fx:id="fromText" layoutX="25.0" layoutY="33.0" prefHeight="25.0" prefWidth="86.0" />
       <Text layoutX="222.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="-ig" wrappingWidth="25.814453125" />
       <Button layoutX="67.0" layoutY="103.0" mnemonicParsing="false" onAction="#addPass" text="Bérlet hozzáadása" />
-      <TextField fx:id="licensePlate2" layoutX="49.0" layoutY="267.0" promptText="Rendszám" />
+      <TextField fx:id="licensePlate2" alignment="CENTER" layoutX="49.0" layoutY="267.0" promptText="Rendszám" />
       <Button layoutX="81.0" layoutY="304.0" mnemonicParsing="false" onAction="#deletePass" text="Bérlet törlése" />
+      <Label fx:id="bFee" alignment="CENTER" layoutX="41.0" layoutY="162.0" prefHeight="17.0" prefWidth="163.0" textAlignment="CENTER" />
    </children>
 </Pane>
